<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="now_playing">Now Playing</string>
    <string name="all">All</string>
    <string name="this_week">This Week</string>
    <string name="today">Today</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="up_coming">Up Coming</string>
</resources>